# music-serve

./: .env  Cargo.toml  README.md
bruno/music-sderver/: bruno.json  collection.bru  createAlbum.bru  createArtists.bru  get Songs.bru  login.bru
bruno/music-serve/: bruno.json  collection.bru  getArtists.bru  getSongs.bru  getUers.bru  login.bru  register.bru
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  utils.rs
src/config/: mod.rs
src/handlers/: albums.rs  artists.rs  auth.rs  mod.rs  singers.rs  songs.rs  users.rs
src/middlewares/: auth.rs  logger.rs  mod.rs
src/models/: album.rs  artist.rs  mod.rs  singer.rs  song.rs  user.rs
src/routers/: mod.rs
src/services/: mod.rs
src/services/albums/: mod.rs  model.rs
src/services/artists/: mod.rs  model.rs
src/services/auth/: mod.rs  model.rs
src/services/songs/: mod.rs  model.rs
src/services/users/: mod.rs  model.rs
src/utils/: auth.rs  date_time.rs  mod.rs
