[package]
name = "music-server"
version = "0.1.0"
edition = "2024"

[registries]
crates-io = { index = "https://github.com/rust-lang/crates.io-index" }

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.4.0"
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-uuid", "with-chrono","debug-print" ] }
sea-orm-migration = "1.1.13"
sea-orm-cli = "1.1.13"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4","v7"] }
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.9.6"
backtrace = "0.3.69"
strum = "0.26.2"
strum_macros = "0.26.2"
sea-query = "0.32.6"
utoipa="5"
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
actix-cors = "0.6.4"
async-trait = "0.1.77"


[scripts]
dev = "cargo watch -x 'run'"
migration = "sea-orm-cli migrate up"
debug ="cargo watch -s 'rust-gdb target/debug/music-server'"
